# server

./: Cargo.toml  LICENSE.txt
.cargo-old/: config
binaries/: manifest.json
src/: main.rs  manifest.rs
