[package]
name = "evse-server"
version = "0.1.0"
authors = ["Matthew Goulart <matthew.goulart@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full", "fs"] }
warp = { version = "0.2", features = ["tls"] }
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0"
semver = { version = "0.10.0", features = ["serde"] }
tokio-inotify = "0.4.1"
futures = "0.3"
clap = "2.33.3"
log = "0.4"
pretty_env_logger = "0.3"